added two more films

--- a/films/eineinfachesereighnis.html
+++ b/films/eineinfachesereighnis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>La Burbuja del Bebé</title>
+    <title>Ein Einfaches Ereignis</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,17 +34,17 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">La Burbuja del Bebé</span>
+                <span class="slider-title">Ein Einfaches Ereignis</span>
                 <p class="slider-text">
-                    A young couple is trying to repair their relationship, while the mother is going through postpartum depression, slowly turning into psychosis.
+                    When a young man believes an older one has stolen his money, he does everything he can to follow him, until the two have a pivotal confrontation.
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=3LnGlEspVpA&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo slider-logo-sae" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
-                    <img  class="slider-logo slider-logo-feten" src="../images/logos 5c5c5c/fetén.png" alt="FETEN" />
+                    <img  class="slider-logo slider-logo-dffb" src="../images/logos 5c5c5c/dffb.png" alt="DFFB" />
+                    <img  class="slider-logo slider-logo-arte" src="../images/logos 5c5c5c/arte.png" alt="ARTE" />
+                    <img  class="slider-logo slider-logo-swr" src="../images/logos 5c5c5c/swr.png" alt="SWR" />
                 </div>  
             </div>
                    
@@ -53,34 +53,34 @@
             <section class="slider_container">
                 <section class="slider-10">
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/1.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/1.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/2.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/3.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/3.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/4.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/4.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/5.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/5.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/6.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/6.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/7.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/7.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/8.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/8.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/9.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/9.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/10.jpg" alt="">
+                        <img src="../images/ein_einfaches_ereignis/10.jpg" alt="">
                     </div>
                 </section>
             </section>
