--- a/films/ordinarypeople.html
+++ b/films/ordinarypeople.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>La Burbuja del Bebé</title>
+    <title>Ordinary People</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,53 +34,45 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">La Burbuja del Bebé</span>
+                <span class="slider-title">Ordinary People</span>
                 <p class="slider-text">
-                    A young couple is trying to repair their relationship, while the mother is going through postpartum depression, slowly turning into psychosis.
+                    Character case study of power dynamics in a scene between a young man and his therapist.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=BARfLTgoTV8" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo slider-logo-sae" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
-                    <img  class="slider-logo slider-logo-feten" src="../images/logos 5c5c5c/fetén.png" alt="FETEN" />
                 </div>  
             </div>
                    
         </div>      
         <div class="slider-content">
             <section class="slider_container">
-                <section class="slider-10">
+                <section class="slider-8">
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/1.jpg" alt="">
+                        <img src="../images/ordinary_people/1.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/2.jpg" alt="">
+                        <img src="../images/ordinary_people/2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/3.jpg" alt="">
+                        <img src="../images/ordinary_people/3.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/4.jpg" alt="">
+                        <img src="../images/ordinary_people/4.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/5.jpg" alt="">
+                        <img src="../images/ordinary_people/5.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/6.jpg" alt="">
+                        <img src="../images/ordinary_people/6.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/7.jpg" alt="">
+                        <img src="../images/ordinary_people/7.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/8.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/9.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/10.jpg" alt="">
+                        <img src="../images/ordinary_people/8.jpg" alt="">
                     </div>
                 </section>
             </section>
