--- a/films/teahouse.html
+++ b/films/teahouse.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>La Burbuja del Bebé</title>
+    <title>Teahouse - Terunobu Fujimori</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,17 +34,17 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">La Burbuja del Bebé</span>
+                <span class="slider-title">Teahouse - Terunobu Fujimori</span>
                 <p class="slider-text">
-                    A young couple is trying to repair their relationship, while the mother is going through postpartum depression, slowly turning into psychosis.
+                    A short film documenting the work of Terunobu Fujimori as he collaborates with architecture masters students from Kingston University in the construction of his Tea House, for The Japanese House: Architecture and Life after 1945 exhibition at the Barbican.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=u9uocIKRKVY" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo slider-logo-sae" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
-                    <img  class="slider-logo slider-logo-feten" src="../images/logos 5c5c5c/fetén.png" alt="FETEN" />
+                    <img  class="slider-logo slider-logo-tynegate" src="../images/logos 5c5c5c/tynegate.png" alt="TYNEGATE" />
+                    <img  class="slider-logo slider-logo-kingston" src="../images/logos 5c5c5c/kingston.png" alt="KINGSTON" />
+                    <img  class="slider-logo slider-logo-barbican" src="../images/logos 5c5c5c/barbican.png" alt="BARBICAN" />
                 </div>  
             </div>
                    
@@ -53,34 +53,34 @@
             <section class="slider_container">
                 <section class="slider-10">
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/1.jpg" alt="">
+                        <img src="../images/ArchDoc/1.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/2.jpg" alt="">
+                        <img src="../images/ArchDoc/2.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/3.jpg" alt="">
+                        <img src="../images/ArchDoc/3.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/4.jpg" alt="">
+                        <img src="../images/ArchDoc/4.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/5.jpg" alt="">
+                        <img src="../images/ArchDoc/5.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/6.jpg" alt="">
+                        <img src="../images/ArchDoc/6.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/7.jpg" alt="">
+                        <img src="../images/ArchDoc/7.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/8.jpg" alt="">
+                        <img src="../images/ArchDoc/8.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/9.jpg" alt="">
+                        <img src="../images/ArchDoc/9.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/la_burbuja_del_bebe/10.jpg" alt="">
+                        <img src="../images/ArchDoc/10.png" alt="">
                     </div>
                 </section>
             </section>
