--- a/films/companerosdepiso.html
+++ b/films/companerosdepiso.html
@@ -85,7 +85,7 @@
     <div class="sidebox">
         <div class="d-flex flex-column justify-content-center">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-img-content">
                     <div class="img-container mb-3">                   
                         <img class="img-fluid" src="../images/ivan photo.JPG" alt="Ivan Marković" />
                     </div>
