--- a/films/irreplaceable.html
+++ b/films/irreplaceable.html
@@ -129,7 +129,7 @@
                     <p class="text-bio job-title">
                         <span style="white-space: nowrap;">Email: <a class="text-bio text-lightgrey" href="mailto:ivanmarkovicfilm@gmail.com">ivanmarkovicfilm@gmail.com</a></span>
                         <span style="white-space: nowrap;">WhatsApp: <a class="text-bio text-lightgrey" href="mailto:+381631574669">+381 63 157 4669</a></span>
-                        <span style="white-space: nowrap;"><a href="../cv/ivanmarkovicfilm_CV.pdf" class="text-bio text-lightgrey">Download CV</a></span>
+                        <span style="white-space: nowrap;"><a href="../cv/ivanmarkovicfilm_CV.pdf" class="text-bio text-lightgrey mt-3">Download CV</a></span>
                     </p>
                 </div>
                 <div class="col-sm-6">
