--- a/films/companerosdepiso.html
+++ b/films/companerosdepiso.html
@@ -39,7 +39,7 @@
                     A short story about two flatmates who recently moved in and started living together.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=ZGkSQHTZ2Is" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=ZGkSQHTZ2Is" class="text-lightgrey">WATCH FILM</a></span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
