--- a/films/dontgo.html
+++ b/films/dontgo.html
@@ -34,12 +34,12 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">Don't go</span>
+                <span class="slider-title">Don't Go</span>
                 <p class="slider-text">
                     When a young man wants to leave, his one-night-stand tries to convince him to stay.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=TzDKEsEyx7c" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=TzDKEsEyx7c" class="text-lightgrey">WATCH FILM</a></span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
