--- a/films/ordinarypeople.html
+++ b/films/ordinarypeople.html
@@ -39,7 +39,7 @@
                     Character case study of power dynamics in a scene between a young man and his therapist.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=BARfLTgoTV8" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=BARfLTgoTV8" class="text-lightgrey">WATCH FILM</a></span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
