--- a/films/teahouse.html
+++ b/films/teahouse.html
@@ -36,10 +36,10 @@
             <div class="slider-desc-content"> 
                 <span class="slider-title">Teahouse - Terunobu Fujimori</span>
                 <p class="slider-text">
-                    A short film documenting the work of Terunobu Fujimori as he collaborates with architecture masters students from Kingston University in the construction of his Tea House, for The Japanese House: Architecture and Life after 1945 exhibition at the Barbican.                
+                    A short film documenting the work of Terunobu Fujimori as he collaborates with architecture masters students from Kingston University in the construction of his Tea House, for "The Japanese House: Architecture and Life after 1945" exhibition at the Barbican.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=u9uocIKRKVY" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=u9uocIKRKVY" class="text-lightgrey">WATCH FILM</a></span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-tynegate" src="../images/logos 5c5c5c/tynegate.png" alt="TYNEGATE" />
