added festivals, some minor changes

--- a/films/irreplaceable.html
+++ b/films/irreplaceable.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>IRREPLACEABLE</title>
+    <title>IЯЯEPLACEABLE</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -33,8 +33,8 @@
     <div class="d-flex flex-column justify-content-left">
     <div class="row">
         <div class="slider-desc">
-            <div class="slider-desc-content"> 
-                <span class="slider-title">IRREPLACEABLE</span>
+            <div class="slider-desc-content">                 
+                <span class="slider-title">IЯЯEPLACEABLE</span>
                 <p class="slider-text">
                     When John experiences sexual impotence with his rather cold, but attractive wife Anna, the fear of being replaced is starting to haunt him as it leads to obsessive worries about her potential infidelity with another man, an unfamiliar individual he starts repeatedly encountering.
                 </p>
