--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -32,8 +32,13 @@
     </nav>
     <div class="d-flex flex-column justify-content-left">
     <div class="row">
-        <div class="slider-desc">
+        <div class="slider-desc slider-desc-festivals">
             <div class="slider-desc-content"> 
+                <div class="slider-logos slider-logos-festivals">                   
+                    <img  class="slider-logo slider-logo-fest-nytristate" src="../images/logos 5c5c5c/NY Tristate.png" alt="NY TRISTATE" />
+                    <img  class="slider-logo slider-logo-fest-lhiff" src="../images/logos 5c5c5c/LHIFF.png" alt="LHIFF" />
+                    <img  class="slider-logo slider-logo-fest-tokyo" src="../images/logos 5c5c5c/Tokyo.png" alt="TOKYO" />
+                </div> 
                 <span class="slider-title">La Burbuja del Bebé</span>
                 <p class="slider-text">
                     A young couple is trying to repair their relationship, while the mother is going through postpartum depression, slowly turning into psychosis.
