--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="horizontal-slide horizontal-slide-photo" data-slide-index="1" onclick="handleSlideClick(1)">
                 <a class="info-link" href="./films/irreplaceable.html">
-                    <img src="./images/irreplacable/10.jpg" alt="IRREPLACEABLE">
+                    <img src="./images/irreplacable/10.jpg" alt="IЯЯEPLACEABLE">
                    
                     <span class="info-button">
                         <i class="fa-solid fa-ellipsis"></i>
@@ -48,7 +48,7 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="movie-title">IRREPLACEABLE</span>
+                                <span class="movie-title">IЯЯEPLACEABLE</span>
                             </p>
                         </div>
                         <div class="col-md">
