--- a/films/dontgo.html
+++ b/films/dontgo.html
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">Don't Go</span>
+                <span class="slider-title">Don't Go (1 min Short Film)</span>
                 <p class="slider-text">
                     When a young man wants to leave, his one-night-stand tries to convince him to stay.                
                 </p>
