fixing la burbuja after adding festival logos

--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -34,10 +34,16 @@
     <div class="row">
         <div class="slider-desc slider-desc-festivals">
             <div class="slider-desc-content"> 
-                <div class="slider-logos slider-logos-festivals">                   
-                    <img  class="slider-logo slider-logo-fest-nytristate" src="../images/logos 5c5c5c/NY Tristate.png" alt="NY TRISTATE" />
-                    <img  class="slider-logo slider-logo-fest-lhiff" src="../images/logos 5c5c5c/LHIFF.png" alt="LHIFF" />
-                    <img  class="slider-logo slider-logo-fest-tokyo" src="../images/logos 5c5c5c/Tokyo.png" alt="TOKYO" />
+                <div class="slider-logos slider-logos-festivals"> 
+                    <a target="_blank" href="https://www.lhifilmfestival.com">
+                       <img  class="slider-logo slider-logo-fest-lhiff" src="../images/logos 5c5c5c/LHIFF.png" alt="LHIFF" />   
+                    </a> 
+                    <a target="_blank" href="https://www.newyorktristatefilm.com">              
+                       <img  class="slider-logo slider-logo-fest-nytristate" src="../images/logos 5c5c5c/NY Tristate.png" alt="NY TRISTATE" />
+                    </a> 
+                    <a target="_blank" href="https://www.tokyoshortfilmfest.com"> 
+                       <img  class="slider-logo slider-logo-fest-tokyo" src="../images/logos 5c5c5c/Tokyo.png" alt="TOKYO"  />
+                    </a> 
                 </div> 
                 <span class="slider-title">La Burbuja del Bebé</span>
                 <p class="slider-text">
