added the mad scientist, added winning logo

--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -39,7 +39,7 @@
                        <img  class="slider-logo slider-logo-fest-lhiff" src="../images/logos 5c5c5c/LHIFF.png" alt="LHIFF" />   
                     </a>
                     <a class="a-no-style" target="_blank" href="https://www.newyorktristatefilm.com">              
-                       <img  class="slider-logo slider-logo-fest-nytristate" src="../images/logos 5c5c5c/NY Tristate.png" alt="NY TRISTATE" />
+                       <img  class="slider-logo slider-logo-fest-nytristate" src="../images/logos 5c5c5c/ny winner.png" alt="NY TRISTATE" />
                     </a> 
                     <a class="a-no-style" target="_blank" href="https://www.tokyoshortfilmfest.com"> 
                        <img  class="slider-logo slider-logo-fest-tokyo" src="../images/logos 5c5c5c/Tokyo.png" alt="TOKYO"  />
