--- a/films/themadscientist.html
+++ b/films/themadscientist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>Don't go</title>
+    <title>The Mad Scientist</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,12 +34,12 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">Don't Go (1 min Short Film)</span>
+                <span class="slider-title">The Mad Scientist (1 min Short Film)</span>
                 <p class="slider-text">
-                    When a young man wants to leave, his one-night-stand tries to convince him to stay.                
+                    In the depths of his lab a mad scientist shows off his most recent experiment.                
                 </p>
                 <br>
-                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=TzDKEsEyx7c" class="text-lightgrey">WATCH FILM</a></span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=l1WDGxzZeb4" class="text-lightgrey">WATCH FILM</a></span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
@@ -49,32 +49,12 @@
         </div>      
         <div class="slider-content">
             <section class="slider_container">            
-                <section class="slider-7">
+                <section class="slider-1">
                     <div class="slide">
-                        <img src="../images/dont_go/1.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/dont_go/2.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/dont_go/3.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/dont_go/4.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/dont_go/5.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/dont_go/6.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/dont_go/7.jpg" alt="">
+                        <img src="../images/the_mad_scientist/1.jpg" alt="">
                     </div>
                 </section>
             </section>
-           <!--  <button onclick="$('.slider').slick('slickPrev')">Previous</button>
-            <button onclick="$('.slider').slick('slickNext')">Next</button> -->
         </div>
     </div>
     
