--- a/index.html
+++ b/index.html
@@ -189,6 +189,30 @@
                 </div>
                 
             </div>
+            <div class="horizontal-slide horizontal-slide-photo" data-slide-index="7" onclick="handleSlideClick(1)">
+                <a class="info-link" href="./films/themadscientist.html">
+                    <img src="./images/the_mad_scientist/1.jpg" alt="The Mad Scientist">
+                   
+                    <span class="info-button">
+                        <i class="fa-solid fa-ellipsis"></i>
+                    </span>
+                </a>
+                <div class="layout-left mt-3 max-width">
+                    <div class="row no-gutters">
+                        <div class="col-auto">
+                            <p class="text-light mb-0 letter-space">
+                                <span class="movie-title">The Mad Scientist</span>
+                            </p>
+                        </div>
+                        <div class="col-md">
+                            <p class="text-light mb-0 pl-0 pl-md-2">
+                                <span class="letter-space show-hover">Adam Pavlovič  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Joseph Jones, Felipe Opazo</span>
+                                <br>
+                            </p> 
+                        </div>
+                    </div>
+                </div>               
+            </div>
             <div class="horizontal-slide horizontal-slide-photo" data-slide-index="7" onclick="handleSlideClick(7)">
                 <a class="info-link" href="./films/dontgo.html">
                     <img src="./images/dont_go/5.jpg" alt="Don't Go">
