tokyo-win-logo, irreplacable still changed, irreplacable new link

--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -42,7 +42,7 @@
                        <img  class="slider-logo slider-logo-fest-nytristate" src="../images/logos 5c5c5c/ny winner.png" alt="NY TRISTATE" />
                     </a> 
                     <a class="a-no-style" target="_blank" href="https://www.tokyoshortfilmfest.com"> 
-                       <img  class="slider-logo slider-logo-fest-tokyo" src="../images/logos 5c5c5c/Tokyo.png" alt="TOKYO"  />
+                       <img  class="slider-logo slider-logo-fest-tokyo" src="../images/logos 5c5c5c/TOKYO WINNER.png" alt="TOKYO"  />
                     </a> 
                 </div> 
                 <span class="slider-title">La Burbuja del Bebé</span>
